# cpp_playground

./: CMakePresets.json
src/libs/core/: CMakeLists.txt
src/libs/core/core/: random_generators.hpp
src/tests/: CMakeLists.txt
src/tests/benchmarks/: CMakeLists.txt  binary_search_benchmarks.cpp
src/tests/unit_tests/: binary_search_tests.cpp  core_tests.cpp
